# QuantumAppAgent

./: .dockerignore  .env.example  .gitignore  0616设计规范AI版.txt  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README.zh-CN.md  SKILL.md  agent.md  circuit-api.md  create_cqlib_skills.py  create_cqlib_skills_v2.py  docker-compose.yml  platform-api.md  pyproject.toml  research_request.md  simulator-api.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/assets/: cn_info.md
.github/workflows/: docker.yml
EvoScientist/: EvoScientist.py  __init__.py  backends.py  prompts.py  sessions.py
EvoScientist/channels/: README.md
EvoScientist/cli/: agent.py  commands.py  interactive.py  resume_hint.py  status_bar.py  tui_interactive.py
EvoScientist/config/: onboard.py  settings.py
EvoScientist/langgraph_dev/: langgraph.json
EvoScientist/llm/: context_window.py  models.py  patches.py
EvoScientist/mcp/: README.md
EvoScientist/middleware/: memory_lifecycle.py  tool_selector.py
EvoScientist/stream/: state.py
EvoScientist/subagents/: _factory.py  code.yaml  data_analysis.yaml  debug.yaml  planner.yaml  research.yaml  writing.yaml
EvoScientist/tools/: __init__.py  quantum_validation.py
Maxcut/: README.md  main.py  maxcut_solver.py
Maxcut/static/: app.js  index.html  style.css
docs/: README.md
docs/recipes/: deployment-macos-24h.md
finance/: requirements.txt
finance-qlstm/backend/: requirements.txt
finance/backend/: data_loader.py  main.py  qaoa_solver.py  qubo_model.py
finance/frontend/: index.html
finance/results/: quantum_demo_k3.json  quantum_full_k4.json  quantum_standard_k4.json
qlstm/backend/: requirements.txt
qlstm/frontend/: app.js  index.html  serve.py  style.css
qlstm/results/: classic_lstm.pth  comparison_results.json  qlstm_best.pth
quantum_app_example/Finance_QAOA/: README.md  solution_plan.md  verification_report.md
quantum_app_example/Finance_QRC/: README.md  requirements.txt  server_log.txt  solution_plan.md  verification_report.md
quantum_app_example/H2_VQE/: README.md  solution_plan.md  verification_report.md
quantum_app_example/MaxCut_QAOA/: README.md  solution_plan.md  verification_report.md
quantum_app_example/UC_QAOA/: README.md  solution_plan.md  verification_report.md
tests/: conftest.py  stream_v3_fakes.py  test_additional_channel_smoke.py  test_agent_loader.py  test_agent_mcp_cache.py  test_ask_user.py  test_async_notifier.py  test_async_subagent_factory.py  test_async_subagent_swap.py  test_async_watcher_middleware.py  test_auxiliary_model.py  test_backends.py  test_background.py  test_background_middleware.py  test_bus_integration.py  test_ccproxy_manager.py  test_channel_command.py  test_channel_command_ui.py  test_channel_comprehensive.py  test_channel_debug.py  test_channel_notification_origin.py  test_cli_channel_bus_mode.py  test_cli_channel_slash.py  test_cli_completion.py  test_cli_deploy.py  test_cli_resume_flag.py  test_cli_run_name.py  test_cli_serve.py  test_cli_tui_dispatch.py  test_code_interpreter_middleware.py  test_command_manager.py  test_compact_command.py  test_config.py  test_configurable_model_middleware.py  test_context_editing_middleware.py  test_context_overflow_middleware.py  test_context_window.py  test_current_command.py  test_delete_command.py  test_diff_format.py  (+61 more)
tyqa/: __init__.py  __main__.py  agent_graph.py  backends.py  background.py  ccproxy_manager.py  paths.py  prompts.py  sessions.py  stt.py  update_check.py  utils.py
tyqa/channels/: README.md  __init__.py  base.py  capabilities.py  channel_manager.py  config.py  consumer.py  debug.py  formatter.py  middleware.py  mixins.py  plugin.py  retry.py  standalone.py
tyqa/cli/: __init__.py  _agent_loader.py  _app.py  _constants.py  agent.py  async_notifier.py  channel.py  clipboard.py  commands.py  file_mentions.py  history_suggester.py  interactive.py  mcp_install_cmd.py  mcp_ui.py  resume_hint.py  rich_command_ui.py  skills_cmd.py  status_bar.py  tui_backends.py  tui_interactive.py  tui_runtime.py
tyqa/commands/: __init__.py  _completion_engine.py  base.py  channel_ui.py  manager.py
tyqa/config/: __init__.py  settings.py
tyqa/deploy/: __init__.py  server.py  webui.py
tyqa/langgraph_dev/: __init__.py  graphs.py  langgraph.json  (+2 more)
(+486 files in other folders)
